@@ -1,0 +1,25 @@
+#
+# Makefile for bookentry user interfaces and resources files
+#
+#  J. R. Fowler 2013
+#
+#
+
+#
+# Definitions
+#
+
+
+#
+# Target lists
+#
+
+all:
+
+#
+# Clean up our mess (what mess...)
+#
+clean:
+	rm -rf *~ 
+
+distclean: clean
